fix: Fixed checkbox misalignment in Chrome

--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -237,7 +237,8 @@ textarea {
         }
 
         input[type='checkbox'] {
-            margin-left: -1em;
+            // adding the fraction prevents a slight misalignment in chrome
+            margin-left: -1.2em;
         }
     }
 }
